[gd_scene load_steps=3 format=3 uid="uid://d2rrv6nlpencx"]

[ext_resource type="Theme" uid="uid://ddip2yriujj48" path="res://theme.tres" id="1_hducs"]
[ext_resource type="Script" path="res://debug_menu.gd" id="2_3yhh7"]

[node name="DebugMenu" type="PanelContainer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("1_hducs")
script = ExtResource("2_3yhh7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="AddCharButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add Test Character"

[node name="AddXpButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Give Front Character XP"

[node name="AddMoneyButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Give Money"

[node name="FreeRerollButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Free Reroll"

[connection signal="pressed" from="MarginContainer/VBoxContainer/AddCharButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AddXpButton" to="." method="_on_add_xp_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AddMoneyButton" to="." method="_on_add_money_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FreeRerollButton" to="." method="_on_free_reroll_button_pressed"]
